# hailo_tappas_ros2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  download_resources.sh  install.sh  package.xml  post_install.sh  requirements.txt  ros_entrypoint.sh  setup.py  setup_env.sh
.devcontainer/: devcontainer.json
.github/workflows/: auto-version-tag.yaml  build-docker-image.yaml  build-image.yaml  docker-publish.yml  publish-docker-image.yaml  publish-docker.yml  release-image.yaml  tag.yaml  vesrion-bump.yaml
hailo_common/: package.xml  setup.py
hailo_common/hailo_common/: embeddings_gallery.py  gstreamer_app.py  hailo_detection.py
hailo_common/test/: test_embedings_gallery.py  test_hailo_detection.py
hailo_face_recognition/: package.xml  setup.cfg  setup.py
hailo_face_recognition/hailo_face_recognition/: face_gallery.py  face_recognition.py  face_recognition_node.py  face_recognition_pipeline.py
hailo_face_recognition/hailo_face_recognition/config/: hailo_params.yaml
hailo_face_recognition/hailo_face_recognition/launch/: hailo.debug.launch.py  hailo.launch.py  hailo.test.launch.py
hailo_face_recognition/test/: test_face_gallery.py  test_face_recognition.py
hailo_face_recognition_interfaces/: CMakeLists.txt  package.xml
hailo_msgs/: CMakeLists.txt  package.xml
hailo_msgs/srv/: DeleteGalleryItem.srv  SaveGalleryItem.srv
hailo_rpi_ros2/: face_gallery.py  package.xml  ros2_node.py  setup.cfg  setup.py
hailo_rpi_ros2/hailo_rpi_ros2/: face_detection.py  face_gallery.py  face_recognition.py  face_recognition_node.py  face_recognition_pipeline.py  gstreamer_app.py  ros2_node.py  test_gallery.json
hailo_rpi_ros2/hailo_rpi_ros2/config/: hailo_params.yaml
hailo_rpi_ros2/hailo_rpi_ros2/launch/: hailo.debug.launch.py  hailo.launch.py  hailo.test.launch.py
hailo_rpi_ros2/hailo_rpi_ros2/resources/: face_recognition_local_gallery.json  local_gallery.json
hailo_rpi_ros2/test/: test_face_detection.py  test_face_gallery.py  test_face_recognition.py  test_face_recognition_node.py
hailo_rpi_ros2_interfaces/: CMakeLists.txt  package.xml
hailo_rpi_ros2_interfaces/srv/: AddFaceName.srv  DeleteFace.srv  SaveFace.srv
src/: detection_pipeline.py  face_gallery.py  ros2_node.py
supervisor/: hailo.conf  start_face_recognition.sh
