<package format="3">
  <name>hailo-rpi-ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 package for Hailo RPi</description>
  <maintainer email="kirikakis@gmail.com">Stefanos Kyrikakis</maintainer>
  <license>MIT License</license>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>